--- a/share/steam-skin-manager/help/custom.html
+++ b/share/steam-skin-manager/help/custom.html
@@ -6,9 +6,9 @@
 </head>
 <body style="font-family:Ubuntu Light; font-weight:300;">
 <h3>Installing a Custom skin</h3>
-<p>To install a custom skin, you must first extract it. It is highly reommended to put it into a place where it won't be bothering you.</p>
+<p>To install a custom skin, you must first extract it. It is highly reommended to put it into a place where it won't be bothering you so that you can leave it there.</p>
 
-<p>This won't copy the folder, only link it with Steam. If you delete any custom theme and won't backup it, you'll loose it.</p>
+<p>This won't copy the folder, only link it with Steam. If you delete any custom theme and won't back it up, you'll loose it.</p>
 
 <p>If you decide to move your skin folder elsewhere, you'll have to set it here again, which will overwrite previous settings.</p>
 
