--- a/share/steam-skin-manager/help/decorations.html
+++ b/share/steam-skin-manager/help/decorations.html
@@ -6,9 +6,9 @@
 </head>
 <body style="font-family:Ubuntu Light; font-weight:300;">
 <h3>Window decorations</h3>
-<p>Window decorations are borders around all application windows. They contain close, minimize, maximize buttons and a title.</p>
+<p>Window decorations are borders around all application windows. They usually contain close, minimize, maximize buttons and a title.</p>
 
-<p>Steam can use native decorations or no decorations, which is the default behaviour. To use Steam with decorations, launch "Steam wb" from the dash or menu.</p>
+<p>Steam can't use native decorations on its own as it comes with it's own interface. Find out how to use Steam with system decorations in the <a href="./launcher.html">launcher section</a>.</p>
 
 <h3>Warning!</h3>
 <p>Using Steam with native window decorations is an experimental feature and may not work or be buggy.</p>
