--- a/share/steam-skin-manager/help/bundled.html
+++ b/share/steam-skin-manager/help/bundled.html
@@ -7,13 +7,13 @@
 <body style="font-family:Ubuntu Light; font-weight:300;">
 <h3>Installing a Bundled skin</h3>
 <p>Right now the tool comes with two themes in two variants. There are Ubuntu Ambiance and Ubuntu Radiance skins. You can use them both either with or without system window decorations.</p>
-<p>To install them, switch to Bundled Skin tab, choose your skin, decide about <a href="./decorations.html">window decorations</a> and Apply.</p>
+<p>To install them, switch to the Appearance tab, choose your skin, decide whether you want to use native <a href="./decorations.html">window decorations</a> and Apply.</p>
 
 <h3>Warning!</h3>
-<p>To launch Steam with window decorations you'll have to use "Steam wb" item available in your dash or menu.</p>
+<p>To launch Steam with window decorations you can't use the default Steam launcher, instead you must launch Steam with a hack. Find more in the <a href="./launcher.html">launcher section</a>.</p>
 
 <h3>Expandability</h3>
-<p>If you wish to add your skin to this category, you'll have to follow folder organisation and place it into /usr/shar/steam/skins directory.</p>
+<p>If you wish to add your skin to this category, you'll have to follow folder organisation and place it into "SteamSkinManager_Directory/share/steam/skins" directory.</p>
 
 <p><a href="./help.html">Go home</a></p>
 </body>
