--- a/share/steam-skin-manager/help/changelog.html
+++ b/share/steam-skin-manager/help/changelog.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Steam Skin Manager Help - Changelog</title>
 </head>
-<body onload="resizeFrame(document.getElementById('iframe'))" style="font-family:Ubuntu Light; font-weight:300;">
+<body onload="resizeFrame(document.getElementById('iframe'))" style="font-family: 'Ubuntu Light'; font-weight: 300;">
 
-<h3>Changelog</h3>
+<header style="position: fixed; bottom: 0px; right: 0px; left: 0px; padding: 2px 10px; background-color: #fff; box-shadow: 0 0 4px #333; text-align: center;">
+	<h3 style="float: left; margin: 0px; padding: 0px;">Changelog</h3>
+	<a style="float: center;" href="./help.html">Go home</a>
+	<i style="float: right; color: #666;">Requires internet connection</i>
+</header>
 
-<i style="float:right; color:#666666; margin-right:50px;">Requires internet connection</i><br>
-<iframe id="iframe" style="position:relative; width:100%; height:400px; border:0px;" src="http://iubuntu.cz/Steam/changelog.php"></iframe>
-
-<p><a href="./help.html">Go home</a></p>
+<iframe id="iframe" style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; width: 100%; height: 100%; border: 0px; z-index: -10;" src="http://www.iubuntu.cz/Steam/changelog.php"></iframe>
 </body>
 </html>
