--- a/share/steam-skin-manager/help/bundled.html
+++ b/share/steam-skin-manager/help/bundled.html
@@ -1,20 +1,38 @@
 <!DOCTYPE HTML>
+
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Steam Skin Manager Help - Bundled Skin</title>
-</head>
-<body style="font-family:Ubuntu Light; font-weight:300;">
-<h3>Installing a Bundled skin</h3>
-<p>Right now the tool comes with two themes in two variants. There are Ubuntu Ambiance and Ubuntu Radiance skins. You can use them both either with or without system window decorations.</p>
-<p>To install them, switch to the Appearance tab, choose your skin, decide whether you want to use native <a href="./decorations.html">window decorations</a> and Apply.</p>
+	<head>
+		<meta charset="UTF-8">
+		<title>Steam Skin Manager - Help</title>
+		<link href="assets/styles.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="assets/javascript.js"></script>
+	</head>
+	
+	<body>
+		<div id="page">
+			<header>
+				<h1>Steam Skin Manager's Help - Bundled Skins</h1>
+			</header>
+			
+			<article>
+				<h3>Installing a Bundled skin</h3>
+				<p>Right now the tool comes with two themes in two variants. There are Ubuntu Ambiance and Ubuntu Radiance skins. You can use them both either with or without system window decorations.</p>
+				<p>To install them, switch to the Appearance tab, choose your skin, decide whether you want to use native <a href="./decorations.html">window decorations</a> and Apply.</p>
+				
+				<section>
+					<h3>Warning!</h3>
+					<p>To launch Steam with window decorations you can't use the default Steam launcher, instead you must launch Steam with a hack. Find more in the <a href="./launcher.html">launcher section</a>.</p>
+				</section>
+				<section>
+					<h3>Expandability</h3>
+					<p>If you wish to add your skin to this category, you'll have to follow folder organisation and place it into "usr/share/steam/skins" or "Local_SteamSkinManager_Directory/share/steam/skins" directory. <a href="./dev.html">Read&nbsp;more&nbsp;&raquo;</a></p>
+				</section>
+			</article>
+			
+			<footer>
+				<a href="help.html">Home &#8962;</a>
+			</footer>
+		</div>
+	</body>
 
-<h3>Warning!</h3>
-<p>To launch Steam with window decorations you can't use the default Steam launcher, instead you must launch Steam with a hack. Find more in the <a href="./launcher.html">launcher section</a>.</p>
-
-<h3>Expandability</h3>
-<p>If you wish to add your skin to this category, you'll have to follow folder organisation and place it into "SteamSkinManager_Directory/share/steam/skins" directory.</p>
-
-<p><a href="./help.html">Go home</a></p>
-</body>
 </html>
