--- a/share/steam-skin-manager/help/custom.html
+++ b/share/steam-skin-manager/help/custom.html
@@ -1,22 +1,39 @@
 <!DOCTYPE HTML>
+
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Steam Skin Manager Help - Custom Skin</title>
-</head>
-<body style="font-family:Ubuntu Light; font-weight:300;">
-<h3>Installing a Custom skin</h3>
-<p>To install a custom skin, you must first extract it. It is highly reommended to put it into a place where it won't be bothering you so that you can leave it there.</p>
+	<head>
+		<meta charset="UTF-8">
+		<title>Steam Skin Manager - Help</title>
+		<link href="assets/styles.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="assets/javascript.js"></script>
+	</head>
+	
+	<body>
+		<div id="page">
+			<header>
+				<h1>Steam Skin Manager's Help - Custom Skins</h1>
+			</header>
+			
+			<article>
+				<h3>Installing a Custom skin</h3>
+				<p>To install a custom skin, you must first extract it. It is highly reommended to put it into a place where it won't be bothering you so that you can leave it there.</p>
 
-<p>This won't copy the folder, only link it with Steam. If you delete any custom theme and won't back it up, you'll loose it.</p>
+				<p>This won't copy the folder, only link it with Steam. If you delete any custom theme and won't back it up, you'll loose it.</p>
 
-<p>If you decide to move your skin folder elsewhere, you'll have to set it here again, which will overwrite previous settings.</p>
+				<p>If you decide to move your skin folder elsewhere, you'll have to set it here again, which will overwrite previous settings.</p>
+				
+				<section>
+					<h3>Using 3rd party skins</h3>
+					<p>Most skins available on the Internet support Microsoft Windows, some Mac OS X. Their appearance may be wrong on Linux. To use them you may have to tweak them a little bit.<br>There is no universal way to accomplish this since every skin may suffer from a different bug.</p>
+				</section>
+				
+				<p>Please note, some skins work flawlessly on Linux, like the <a href="http://boneyardbrew.deviantart.com/art/Metro-for-Steam-2-7-1-292419787">Windows 8 Metro skin</a></p>
+			</article>
+			
+			<footer>
+				<a href="help.html">Home &#8962;</a>
+			</footer>
+		</div>
+	</body>
 
-<h3>Using 3rd party skins</h3>
-<p>Most skins available on the Internet support Microsoft Windows, some Mac OS X. Their appearance may be wrong on Linux. To use them you may have to tweak them a little bit.<br>There is no universal way to accomplish this since every skin may suffer from a different bug.</p>
-
-<p>Please note, some skins work flawlessly on Linux, like <a href="http://boneyardbrew.deviantart.com/art/Metro-for-Steam-2-7-1-292419787">Windows 8 Metro skin</a></p>
-
-<p><a href="./help.html">Go home</a></p>
-</body>
 </html>
