--- a/share/steam-skin-manager/help/decorations.html
+++ b/share/steam-skin-manager/help/decorations.html
@@ -1,24 +1,39 @@
 <!DOCTYPE HTML>
+
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Steam Skin Manager Help - Window decorations</title>
-</head>
-<body style="font-family:Ubuntu Light; font-weight:300;">
-<h3>Window decorations</h3>
-<p>Window decorations are borders around all application windows. They usually contain close, minimize, maximize buttons and a title.</p>
+	<head>
+		<meta charset="UTF-8">
+		<title>Steam Skin Manager - Help</title>
+		<link href="assets/styles.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="assets/javascript.js"></script>
+	</head>
+	
+	<body>
+		<div id="page">
+			<header>
+				<h1>Steam Skin Manager's Help - Bundled Skins</h1>
+			</header>
+			
+			<article>
+					<h3>Window decorations</h3>
+					<p>Window decorations are borders around all application windows. They usually contain close, minimize, maximize buttons and a title.</p>
 
-<p>Steam can't use native decorations on its own as it comes with it's own interface. Find out how to use Steam with system decorations in the <a href="./launcher.html">launcher section</a>.</p>
+					<p>Steam can't use native decorations on its own as it comes with it's own interface. Find out how to use Steam with system decorations in the <a href="./launcher.html">launcher section</a>.</p>
+					
+					<section>
+						<h3>Warning!</h3>
+						<p>Using Steam with native window decorations is an <strong>experimental feature</strong> and may not work or be buggy.</p>
+					</section>
+					<section>
+						<h3>This feature is avalilable thanks to Daniel Scharrer</h3>
+						<p>Source: <a href="https://gist.github.com/06d6b6a5370c4f6979f3">gist.github.com/06d6b6a5370c4f6979f3</a></p>
+					</section>
+			</article>
+			
+			<footer>
+				<a href="help.html">Home &#8962;</a>
+			</footer>
+		</div>
+	</body>
 
-<h3>Warning!</h3>
-<p>Using Steam with native window decorations is an experimental feature and may not work or be buggy.</p>
-
-<h3>This fature is avalilable only thanks to:</h3>
-<p>
-Source: <a href="https://gist.github.com/06d6b6a5370c4f6979f3">gist.github.com/06d6b6a5370c4f6979f3</a><br>
-Author: Daniel Scharrer
-</p>
-
-<p><a href="./help.html">Go home</a></p>
-</body>
 </html>
