--- a/share/steam-skin-manager/help/help.html
+++ b/share/steam-skin-manager/help/help.html
@@ -1,24 +1,62 @@
 <!DOCTYPE HTML>
+
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Steam Skin Manager Help</title>
-</head>
-<body style="font-family:Ubuntu Light; font-weight:300;">
-<h3>Welcome to Steam Skin Manager</h3>
-<p>This tool allows you to install bundled and custom skins for Steam as well as revert to the original skin.</p>
-I want to install:
-<ol>
-<li><a href="./bundled.html">a bundled skin</a></li>
-<li><a href="./custom.html">my or downloaded skin</a></li>
-</ol>
-or I want to <a href="./manualedit.html">edit settings manually</a>.
+	<head>
+		<meta charset="UTF-8">
+		<title>Steam Skin Manager - Help</title>
+		<link href="assets/styles.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="assets/javascript.js"></script>
+	</head>
+	
+	<body>
+		<div id="page">
+			<header>
+				<h1>Steam Skin Manager's Help</h1>
+			</header>
+			
+			<ul id="menu">
+				<a href="bundled.html">
+					<li>
+						<h2>Bundled Skins</h2>
+						<span>Preinstalled themes</span>
+					</li>
+				</a>
+				<a href="custom.html">
+					<li>
+						<h2>Custom Skins</h2>
+						<span>Install own or downloaded theme</span>
+					</li>
+				</a>
+				<a href="app.html">
+					<li>
+						<h2>Application Help</h2>
+						<span>Explore Steam Skin Manager's functionality</span>
+					</li>
+				</a>
+				<a href="license.html">
+					<li>
+						<h2>License</h2>
+						<span>The terms of GNU GPLv3 license</span>
+					</li>
+				</a>
+				<a href="changelog.html">
+					<li>
+						<h2>Changelog</h2>
+						<span>Release changes, progress overview<br><i>(requires internet access)</i></span>
+					</li>
+				</a>
+				<a href="http://www.iubuntu.cz/Steam/">
+					<li>
+						<h2>Steam Skin Manager's Website</h2>
+						<span>Visit the project's homepage<br><i>(requires internet access)</i></span>
+					</li>
+				</a>
+			</ul>
+			
+			<footer>
+				<a href="help.html">Steam Skin Manager NG</a>
+			</footer>
+		</div>
+	</body>
 
-<p>If you want to revert to the original skin, use menu item: <b>Steam &rarr; Revert to the default skin</b>.<p>
-
-<hr>
-
-<p>See <a href="./license.html">Steam Skin Manager license</a> or <a href="./changelog.html">changelog</a>.</p>
-<p style="text-align:center;"><a href="http://iubuntu.cz/Steam">Steam Skin Manager Homepage</a></p>
-</body>
 </html>
