--- a/share/steam-skin-manager/help/launcher.html
+++ b/share/steam-skin-manager/help/launcher.html
@@ -1,22 +1,41 @@
 <!DOCTYPE HTML>
+
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Steam Skin Manager Help - Launcher</title>
-</head>
-<body style="font-family:Ubuntu Light; font-weight:300;">
-<h3>What is a Launcher</h3>
-<p>Launcher is a shotcut to an application. Such a shortcut is usually available in the menu or the dash and can also be pinned to the bar or on the desktop. Launchers contains the name of an application, some description and an icon.</p>
+	<head>
+		<meta charset="UTF-8">
+		<title>Steam Skin Manager - Help</title>
+		<link href="assets/styles.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="assets/javascript.js"></script>
+	</head>
+	
+	<body>
+		<div id="page">
+			<header>
+				<h1>Steam Skin Manager's Help - Application Launcher</h1>
+			</header>
+			
+			<article>
+				<h3>What is a Launcher</h3>
+				<p>Launcher is a shotcut to an application. Such a shortcut is usually available in the menu or the dash and can also be pinned to the bar or on the desktop. Launchers contains the name of an application, some description and an icon.</p>
 
-<h3>Generating Steam Skin Manager Launcher</h3>
-<p>Steam Skin Manager NG comes with a script, that can releave you of the trouble creating your own launcher or having to launch Steam Skin Manager or modified Steam through command-line. You can easily create user-specific launcher from within the Steam Skin Manager's menu, under the File &gt; "Generate .desktop launcher". By clicking on that, a shortcut to Steam Skin Manager should appear in your system menu or dash.</p>
+				<section>
+					<h3>Generating Steam Skin Manager Launcher</h3>
+					<p>Steam Skin Manager NG comes with a script, that can releave you of the trouble creating your own launcher or having to launch Steam Skin Manager or modified Steam through command-line. You can easily create user-specific launcher from within the Steam Skin Manager's menu, under the File &gt; "Generate .desktop launcher". By clicking on that, a shortcut to Steam Skin Manager should appear in your system menu or dash.</p>
+				</section>
+				<section>
+					<h3>Note</h3>
+					<p>If the launcher doesn't appear, you may need to log-out and log-in to see the changes.</p>
+				</section>
+				<section>
+					<h3>Location</h3>
+					<p>SteamSkinManager.desktop file is generated in the Steam Skin Manager root directory and then copied to "~.local/share/applications/"</p>
+				</section>
+			</article>
+			
+			<footer>
+				<a href="help.html">Home &#8962;</a>
+			</footer>
+		</div>
+	</body>
 
-<h3>Note</h3>
-<p>If the launcher doesn't appear, you may need to log-out and log-in to see the changes.</p>
-
-<h3>Location</h3>
-<p>SteamSkinManager.desktop file is generated in the Steam Skin Manager root directory and then copied to "~.local/share/applications/"</p>
-
-<p><a href="./help.html">Go home</a></p>
-</body>
 </html>
