--- a/share/steam-skin-manager/help/license.html
+++ b/share/steam-skin-manager/help/license.html
@@ -1,20 +1,31 @@
 <!DOCTYPE HTML>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Steam Skin Manager Help - License</title>
-</head>
-<body style="font-family:Ubuntu Light; font-weight:300;">
-<h3>Steam Skin Manager License</h3>
-<p>This tool is avaialable under the terms of GNU GPLv3 License.</p>
-<p>All sources can be obtained at <a href="http://iubuntu.cz/Steam">http://iubuntu.cz/Steam</a>.</p>
 
-<h3>Terms</h3>
-<pre style="position:relative; white-space:pre-wrap;">
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Steam Skin Manager - Help</title>
+		<link href="assets/styles.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="assets/javascript.js"></script>
+	</head>
+	
+	<body>
+		<div id="page">
+			<header>
+				<h1>Steam Skin Manager's Help - License</h1>
+			</header>
+			
+			<article>
+				<h3>Steam Skin Manager License</h3>
+				<p>This tool is avaialable under the terms of GNU GPLv3 License.</p>
+				<p>All sources can be obtained at <a href="http://iubuntu.cz/Steam/#git">http://iubuntu.cz/Steam</a>.</p>
+
+				<section>
+					<h3>Terms</h3>
+<pre style="white-space: pre-wrap;">
                     GNU GENERAL PUBLIC LICENSE
                        Version 3, 29 June 2007
 
- Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
+ Copyright (C) 2007 Free Software Foundation, Inc. &lt;http://fsf.org/&gt;
  Everyone is permitted to copy and distribute verbatim copies
  of this license document, but changing it is not allowed.
 
@@ -686,7 +697,13 @@ the library.  If this is what you want to do, use the GNU Lesser General
 Public License instead of this License.  But first, please read
 <http://www.gnu.org/philosophy/why-not-lgpl.html>.
 </pre>
+				</section>
+			</article>
+			
+			<footer>
+				<a href="help.html">Home &#8962;</a>
+			</footer>
+		</div>
+	</body>
 
-<p><a href="./help.html">Go home</a></p>
-</body>
 </html>
