--- a/share/steam-skin-manager/help/changelog.html
+++ b/share/steam-skin-manager/help/changelog.html
@@ -1,17 +1,21 @@
 <!DOCTYPE HTML>
+
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Steam Skin Manager Help - Changelog</title>
-</head>
-<body onload="resizeFrame(document.getElementById('iframe'))" style="font-family: 'Ubuntu Light'; font-weight: 300;">
+	<head>
+		<meta charset="UTF-8">
+		<title>Steam Skin Manager - Help</title>
+		<link href="assets/styles.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="assets/javascript.js"></script>
+	</head>
+	
+	<body>
+		<div id="page">
+			<iframe id="iframe" style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; width: 100%; height: 100%; border: 0px; z-index: -10;" src="http://www.iubuntu.cz/Steam/changelog.php"></iframe>
+			
+			<footer style="text-align: right; padding: 0 20px 0 0;">
+				<a href="help.html">Home &#8962;</a>
+			</footer>
+		</div>
+	</body>
 
-<header style="position: fixed; bottom: 0px; right: 0px; left: 0px; padding: 2px 10px; background-color: #fff; box-shadow: 0 0 4px #333; text-align: center;">
-	<h3 style="float: left; margin: 0px; padding: 0px;">Changelog</h3>
-	<a style="float: center;" href="./help.html">Go home</a>
-	<i style="float: right; color: #666;">Requires internet connection</i>
-</header>
-
-<iframe id="iframe" style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; width: 100%; height: 100%; border: 0px; z-index: -10;" src="http://www.iubuntu.cz/Steam/changelog.php"></iframe>
-</body>
 </html>
