--- a/share/steam-skin-manager/help/launcher.html
+++ b/share/steam-skin-manager/help/launcher.html
@@ -20,7 +20,7 @@
 
 				<section>
 					<h3>Generating Steam Skin Manager Launcher</h3>
-					<p>Steam Skin Manager NG comes with a script, that can releave you of the trouble creating your own launcher or having to launch Steam Skin Manager or modified Steam through command-line. You can easily create user-specific launcher from within the Steam Skin Manager's menu, under the File &gt; "Generate .desktop launcher". By clicking on that, a shortcut to Steam Skin Manager should appear in your system menu or dash.</p>
+					<p>Steam Skin Manager NG comes with a script, that can releave you of the trouble creating your own launcher or having to launch Steam Skin Manager or modified Steam through command-line. You can easily create user-specific launcher from within the Steam Skin Manager's menu, under the Steam &rsaquo; "Generate .desktop launcher". By clicking on that, a shortcut to Steam Skin Manager should appear in your system menu or dash.</p>
 				</section>
 				<section>
 					<h3>Note</h3>
