--- a/share/steam-skin-manager/help/dev.html
+++ b/share/steam-skin-manager/help/dev.html
@@ -29,9 +29,9 @@
 					<p>* So called "Bundled skins", but with the New-Generation not truly bundled, must obey the following rules to be functional:</p>
 					<ol>
 						<li>Your folder's name placed in the directory is the Skin's name, that appears to the user.</li>
-						<li>There <strong>must be</strong> two folders inside your directory, "no-buttons" and "with-buttons".<br>"no-buttons" is the directory without window buttons (this modification is prepared for using native window border) whilst the other folder contains window buttons - maximize,minimize,close - and can be used on it's own with Steam. If you don't intend to create "no-buttons" version, omit it or create a symlink to it so it works no matter what user choose.</li>
+						<li>There <strong>should be two folders inside</strong> your directory, "no-buttons" and "with-buttons".<br>"no-buttons" is the directory without window buttons (this modification is prepared for using native window border) whilst the other folder contains window buttons - maximize,minimize,close - and can be used on it's own with Steam. If you don't intend to create both versions you can omit both folders, however, if you wish to create "no-buttons" version only, you'll have to put the content to the folder of the same name so that Steam Skin Manager can recognize your skin correctly.</li>
 						<li><strong>Description in an optional</strong> file, only one per both theme variants, placed in the root directory of your theme. It must be called "description.txt" and can take advantage of some basic html tags, like - bold,italic,underline,link -. It is recommended to keep the description file shorter rather than long.</li>
-						<li><strong>Preview is another optional</strong> file and if used it must be called "preview.png". There is again only one file for both variants, located in the root directory of your theme. This should be a screenshot of Steam window with the applied theme. Recommended size is 500x277px, but it is not limited.</li>
+						<li><strong>Preview is another optional</strong> file and if used it must be called "preview.png". There is again only one file for both variants, located in the root directory of your theme. This should be a screenshot of Steam window with the applied theme. Images are resized to 500x277px when previewed.</li>
 					</ol>
 				</section>
 			</article>
